# systemd_ctypes

./: .flake8  .gitignore  README.md  break-things  bus.py  event.py  example.py  introspection.py  librarywrapper.py  libsystemd.py  main.py  pyproject.toml  signature.py
.github/workflows/: tests.yaml
examples/: dbus-client-hostnamed.py  dbus-run0.py  dbus-service.py  inotify.py
src/systemd_ctypes/: __init__.py  bus.py  bustypes.py  event.py  handle.py  inotify.py  introspection.py  librarywrapper.py  libsystemd.py  pathwatch.py  signature.py  typing.py
systemd_ctypes/: __init__.py  bus.py  event.py  inotify.py  introspection.py  librarywrapper.py  libsystemd.py  pathwatch.py  signature.py
test/: run  test_basic.py  test_bustypes.py  test_code.py  test_introspection.py  test_p2p.py  test_pathwatch.py  test_refloop.py
