[build-system]
requires = ["flit_core >=3.7,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "systemd_ctypes"
authors = [{name = "Allison Karlitskaya", email = "allison.karlitskaya@redhat.com"}]
readme = "README.md"
license = {file = "COPYING"}
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/allisonkarlitskaya/systemd_ctypes/"

[tool.pylint]
max-line-length = 118
disable = [
  "R0903",  # Too few public methods
  "R1705",  # Unnecessary "else" after "return"
  "W1113",  # Keyword argument before variable positional arguments  (PEP-570 is Python 3.8)
]

[tool.pytest.ini_options]
log_cli = true

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = site

[testenv]
sitepackages = true
deps=
  coverage
  pyflakes
  pytest
  python-dbusmock
commands =
  python3 -m pyflakes systemd_ctypes test
  python3 -m coverage erase
  python3 -m coverage run --source systemd_ctypes --module pytest {posargs}
  python3 -m coverage report --skip-covered  --fail-under=85 --show-missing

[testenv:site]
deps=
"""
