[build-system]
requires = ["flit_core >=3.7,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "systemd_ctypes"
authors = [{name = "Allison Karlitskaya", email = "allison.karlitskaya@redhat.com"}]
readme = "README.md"
license = {file = "COPYING"}
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/allisonkarlitskaya/systemd_ctypes/"

[tool.mypy]
mypy_path = 'src'

[tool.pylint]
max-line-length = 118
disable = [
  "R0903",  # Too few public methods
  "R1705",  # Unnecessary "else" after "return"
  "W1113",  # Keyword argument before variable positional arguments  (PEP-570 is Python 3.8)
]

[tool.pytest.ini_options]
pythonpath = ["src"]
log_cli = true

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
source_pkgs = ["systemd_ctypes"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
  "pragma: no cover",  # default
  "raise NotImplementedError",
]

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = site

[testenv]
sitepackages = true
deps=
  pyflakes
  pytest-cov
  python-dbusmock
commands =
  python3 -m pyflakes src/systemd_ctypes test
  python3 -m pytest -opythonpath= --cov {posargs}

[testenv:site]
deps=
"""
